--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "react-hook-form": "^7.46.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.4"
   }
 }
