--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.9",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
+    "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.49.0",
@@ -22,6 +23,7 @@
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "tailwindcss": "3.3.3",
